--- a/package.json
+++ b/package.json
@@ -8,22 +8,25 @@
   },
   "dependencies": {
     "amfe-flexible": "^2.2.1",
-    "axios": "^0.27.2",
-    "core-js": "^3.8.3",
-    "vant": "^2.12.48",
-    "vue": "^2.6.14",
-    "vue-router": "^3.5.1",
+    "axios": "^0.24.0",
+    "core-js": "^3.6.5",
+    "less": "^4.1.2",
+    "less-loader": "7.0.0",
+    "moment": "^2.29.1",
+    "postcss": "^8.4.5",
+    "postcss-pxtorem": "5.1.1",
+    "vant": "^2.12.35",
+    "vue": "^2.6.11",
+    "vue-cropper": "^0.5.8",
+    "vue-router": "^3.2.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "babel-plugin-import": "^1.13.5",
-    "less": "^4.0.0",
-    "less-loader": "^8.0.0",
-    "postcss": "^8.4.14",
-    "postcss-pxtorem": "^6.0.0",
-    "vue-template-compiler": "^2.6.14"
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "babel-plugin-import": "^1.13.3",
+    "sass-loader": "^8.0.2",
+    "vue-template-compiler": "^2.6.11"
   }
 }
