--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.29.1",
     "postcss": "^8.4.5",
     "postcss-pxtorem": "5.1.1",
+    "socket.io-client": "^4.5.1",
     "vant": "^2.12.35",
     "vue": "^2.6.11",
     "vue-cropper": "^0.5.8",
