--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "dev_t": "set NODE_OPTIONS=\"--openssl-legacy-provider\" & npm run serve\n"
   },
   "dependencies": {
     "amfe-flexible": "^2.2.1",
